[gd_scene load_steps=12 format=3 uid="uid://bp6xt6d8l8q2s"]

[ext_resource type="Script" path="res://assets/scripts/pointBlock.gd" id="1_6ari2"]
[ext_resource type="Texture2D" uid="uid://dtc3sa5vx2h7o" path="res://assets/sprites/blocks.PNG" id="2_r2j4s"]

[sub_resource type="Curve" id="Curve_xrkds"]
_data = [Vector2(0.012931, 1), 0.0, 0.0, 0, 0, Vector2(0.74569, 0.726316), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Gradient" id="Gradient_xrp48"]
colors = PackedColorArray(0.968627, 0.780392, 0.337255, 0.533333, 0.968627, 0.780392, 0.337255, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_68hl5"]
size = Vector2(64, 64)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_o157c"]
size = Vector2(66.8, 67.2)

[sub_resource type="Animation" id="Animation_htgjr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.5, 2.5)]
}

[sub_resource type="Animation" id="Animation_ubd3h"]
resource_name = "blockIn"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(2.7, 2.7), Vector2(2.5, 2.5)]
}

[sub_resource type="Animation" id="Animation_ilujg"]
resource_name = "blockOn"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.5, 2.5), Vector2(2.7, 2.7), Vector2(2.5, 2.5)]
}

[sub_resource type="Animation" id="Animation_2bvh5"]
resource_name = "blockOut"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(2.5, 2.5), Vector2(2.7, 2.7), Vector2(0, 0)]
}
tracks/1/type = "method"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.8),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"_gone"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m3vx0"]
_data = {
"RESET": SubResource("Animation_htgjr"),
"blockIn": SubResource("Animation_ubd3h"),
"blockOn": SubResource("Animation_ilujg"),
"blockOut": SubResource("Animation_2bvh5")
}

[node name="pointBlock" type="Node2D"]
scale = Vector2(2.5, 2.5)
script = ExtResource("1_6ari2")

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 12
speed_scale = 2.0
explosiveness = 1.0
emission_shape = 1
emission_sphere_radius = 4.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 75.0
initial_velocity_max = 100.0
scale_amount_min = 4.0
scale_amount_max = 20.0
scale_amount_curve = SubResource("Curve_xrkds")
color_ramp = SubResource("Gradient_xrp48")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 16
collision_mask = 0

[node name="Sprite2D" type="Sprite2D" parent="StaticBody2D"]
modulate = Color(0.968627, 0.780392, 0.337255, 1)
texture = ExtResource("2_r2j4s")
hframes = 2
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_68hl5")

[node name="onTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="awayTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="deadTimer" type="Timer" parent="."]
one_shot = true

[node name="Label" type="Label" parent="."]
offset_left = -12.4
offset_top = -27.2
offset_right = 112.6
offset_bottom = 248.8
scale = Vector2(0.2, 0.2)
theme_override_font_sizes/font_size = 200
text = "t"

[node name="hurtArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurtArea"]
visible = false
position = Vector2(0.200003, 0.400003)
shape = SubResource("RectangleShape2D_o157c")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m3vx0")
}

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
bus = &"SFX"

[connection signal="timeout" from="onTimer" to="." method="_on_on_timer_timeout"]
[connection signal="timeout" from="awayTimer" to="." method="_on_away_timer_timeout"]
[connection signal="timeout" from="deadTimer" to="." method="_on_dead_timer_timeout"]
[connection signal="body_entered" from="hurtArea" to="." method="_on_hurt_area_body_entered"]
